@@ -14,7 +14,7 @@
 package org.eclipse.hono.service.credentials;
 
 import java.util.Base64;
-import java.util.Collections;
+import java.util.List;
 import java.util.OptionalInt;
 
 import org.eclipse.hono.auth.EncodedPassword;
@@ -40,14 +40,10 @@ public final class Credentials {
      * @return The fully populated secret.
      */
     public static PskCredential createPSKCredential(final String authId, final String psk) {
-        final PskCredential p = new PskCredential(authId);
 
         final PskSecret s = new PskSecret();
         s.setKey(psk.getBytes());
-
-        p.setSecrets(Collections.singletonList(s));
-
-        return p;
+        return new PskCredential(authId, List.of(s));
     }
 
     /**
@@ -55,16 +51,17 @@ public final class Credentials {
      *
      * @param authId The authentication to use.
      * @param password The password to use.
-     * @param maxBcryptIterations max bcrypt iterations to use.
+     * @param bcryptCostFactor max bcrypt cost factor to use.
      * @return The fully populated credential.
      */
-    public static PasswordCredential createPasswordCredential(final String authId, final String password,
-                                                        final OptionalInt maxBcryptIterations) {
-        final PasswordCredential p = new PasswordCredential(authId);
+    public static PasswordCredential createPasswordCredential(
+            final String authId,
+            final String password,
+            final OptionalInt bcryptCostFactor) {
 
-        p.setSecrets(Collections.singletonList(createPasswordSecret(password, maxBcryptIterations)));
-
-        return p;
+        return new PasswordCredential(
+                authId,
+                List.of(createPasswordSecret(password, bcryptCostFactor)));
     }
 
     /**
@@ -75,14 +72,10 @@ public final class Credentials {
      * @return The fully populated credential.
      */
     public static PasswordCredential createPlainPasswordCredential(final String authId, final String password) {
-        final PasswordCredential p = new PasswordCredential(authId);
 
         final PasswordSecret secret = new PasswordSecret();
         secret.setPasswordPlain(password);
-
-        p.setSecrets(Collections.singletonList(secret));
-
-        return p;
+        return new PasswordCredential(authId, List.of(secret));
     }
 
     /**
