@@ -16,7 +16,6 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.never;
@@ -25,14 +24,14 @@ import static org.mockito.Mockito.verify;
 
 import java.nio.charset.StandardCharsets;
 import java.time.Instant;
-import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.Base64;
 import java.util.List;
 import java.util.function.Function;
 import java.util.stream.Stream;
 
+import org.eclipse.hono.service.credentials.Credentials;
 import org.eclipse.hono.util.CredentialsConstants;
 import org.eclipse.hono.util.RegistryManagementConstants;
 import org.junit.jupiter.api.Test;
@@ -50,9 +49,32 @@ import io.vertx.core.json.JsonObject;
 public class CredentialsTest {
 
     private static final String[] CREDENTIAL_TYPES = { CredentialsConstants.SECRETS_TYPE_X509_CERT, CredentialsConstants.SECRETS_TYPE_HASHED_PASSWORD, CredentialsConstants.SECRETS_TYPE_PRESHARED_KEY, "custom" };
+    private static final String NOT_BEFORE_STRING = "2020-08-11T11:38:00Z";
+    private static final Instant NOT_BEFORE = Instant.parse(NOT_BEFORE_STRING);
+    private static final String NOT_AFTER_STRING = "2031-09-11T11:38:00Z";
+    private static final Instant NOT_AFTER = Instant.parse(NOT_AFTER_STRING);
+    private static final String SECRET_COMMENT = "secret comment";
 
     static Stream<String> illegalAuthIds() {
         return Stream.of("$", "#", "%", "!", "(", ")", "?", ",", ";", ":", "");
+    }
+
+    private static <T extends CommonSecret> T addCommonProperties(final T secret) {
+        secret.setComment(SECRET_COMMENT);
+        secret.setNotBefore(NOT_BEFORE);
+        secret.setNotAfter(NOT_AFTER);
+        return secret;
+    }
+
+    private void assertCommonSecretProperties(final JsonObject secret) {
+        assertThat(secret.getString(RegistryManagementConstants.FIELD_SECRETS_NOT_BEFORE)).isEqualTo(NOT_BEFORE_STRING);
+        assertThat(secret.getString(RegistryManagementConstants.FIELD_SECRETS_NOT_AFTER)).isEqualTo(NOT_AFTER_STRING);
+    }
+
+    private void assertCommonSecretProperties(final CommonSecret secret) {
+        assertThat(secret.getComment()).isEqualTo(SECRET_COMMENT);
+        assertThat(secret.getNotBefore()).isEqualTo(NOT_BEFORE);
+        assertThat(secret.getNotAfter()).isEqualTo(NOT_AFTER);
     }
 
     /**
@@ -62,32 +84,64 @@ public class CredentialsTest {
     public void testEncodePasswordCredential() {
 
         final PasswordSecret secret = new PasswordSecret();
-
-        secret.setNotBefore(Instant.EPOCH.truncatedTo(ChronoUnit.SECONDS));
-        secret.setNotAfter(Instant.EPOCH.plusSeconds(1).truncatedTo(ChronoUnit.SECONDS));
-
+        addCommonProperties(secret);
         secret.setPasswordHash("2a5d81942494986ce6e23aadfa18cd426a1d7ab90629a0814d244c4cd82cc81f");
         secret.setSalt("abc");
-
         secret.setHashFunction(RegistryManagementConstants.HASH_FUNCTION_SHA256);
 
-        final PasswordCredential credential = new PasswordCredential("foo");
+        final PasswordCredential credential = new PasswordCredential("foo", List.of(secret));
         credential.setComment("setec astronomy");
-        credential.setSecrets(Collections.singletonList(secret));
 
         final JsonObject jsonCredential = JsonObject.mapFrom(credential);
         assertNotNull(jsonCredential);
         assertEquals("hashed-password", jsonCredential.getString(RegistryManagementConstants.FIELD_TYPE));
+        assertEquals("foo", jsonCredential.getString(RegistryManagementConstants.FIELD_AUTH_ID));
+        assertEquals("setec astronomy", jsonCredential.getString(RegistryManagementConstants.FIELD_SECRETS_COMMENT));
         assertEquals(1, jsonCredential.getJsonArray(RegistryManagementConstants.FIELD_SECRETS).size());
 
         final JsonObject jsonSecret = jsonCredential.getJsonArray(RegistryManagementConstants.FIELD_SECRETS).getJsonObject(0);
+        assertCommonSecretProperties(jsonSecret);
 
-        assertEquals("foo", jsonCredential.getString(RegistryManagementConstants.FIELD_AUTH_ID));
-        assertEquals("setec astronomy", jsonCredential.getString(RegistryManagementConstants.FIELD_SECRETS_COMMENT));
-
-        assertEquals("abc", jsonSecret.getString(RegistryManagementConstants.FIELD_SECRETS_SALT));
+        assertThat(jsonSecret.getString(RegistryManagementConstants.FIELD_SECRETS_HASH_FUNCTION))
+        .isEqualTo(RegistryManagementConstants.HASH_FUNCTION_SHA256);
         assertEquals("2a5d81942494986ce6e23aadfa18cd426a1d7ab90629a0814d244c4cd82cc81f",
                 jsonSecret.getString(RegistryManagementConstants.FIELD_SECRETS_PWD_HASH));
+        assertEquals("abc", jsonSecret.getString(RegistryManagementConstants.FIELD_SECRETS_SALT));
+    }
+
+    /**
+     * Test the decoding of a Json Object to a simple password credential.
+     */
+    @Test
+    public void testDecodePasswordCredentialSucceeds() {
+
+        final JsonObject jsonCredential = new JsonObject()
+                .put(RegistryManagementConstants.FIELD_TYPE, RegistryManagementConstants.SECRETS_TYPE_HASHED_PASSWORD)
+                .put(RegistryManagementConstants.FIELD_AUTH_ID, "foo_ID-ext.4563=F")
+                .put(RegistryManagementConstants.FIELD_ENABLED, true)
+                .put(RegistryManagementConstants.FIELD_SECRETS, new JsonArray()
+                        .add(new JsonObject()
+                                .put(RegistryManagementConstants.FIELD_ENABLED, true)
+                                .put(RegistryManagementConstants.FIELD_SECRETS_NOT_BEFORE, NOT_BEFORE_STRING)
+                                .put(RegistryManagementConstants.FIELD_SECRETS_NOT_AFTER, NOT_AFTER_STRING)
+                                .put(RegistryManagementConstants.FIELD_SECRETS_HASH_FUNCTION, RegistryManagementConstants.HASH_FUNCTION_SHA256)
+                                .put(RegistryManagementConstants.FIELD_SECRETS_PWD_HASH,
+                                        "2a5d81942494986ce6e23aadfa18cd426a1d7ab90629a0814d244c4cd82cc81f")
+                                .put(RegistryManagementConstants.FIELD_SECRETS_SALT, "abc")
+                                .put(RegistryManagementConstants.FIELD_SECRETS_COMMENT, SECRET_COMMENT)));
+
+        final PasswordCredential credential = jsonCredential.mapTo(PasswordCredential.class);
+
+        assertNotNull(credential);
+        assertEquals("foo_ID-ext.4563=F", credential.getAuthId());
+        assertTrue(credential.isEnabled());
+        assertEquals(1, credential.getSecrets().size());
+
+        final PasswordSecret secret = credential.getSecrets().get(0);
+        assertCommonSecretProperties(secret);
+        assertEquals("abc", secret.getSalt());
+        assertEquals(RegistryManagementConstants.HASH_FUNCTION_SHA256, secret.getHashFunction());
+        assertEquals("2a5d81942494986ce6e23aadfa18cd426a1d7ab90629a0814d244c4cd82cc81f", secret.getPasswordHash());
     }
 
     /**
@@ -95,16 +149,53 @@ public class CredentialsTest {
      */
     @Test
     public void testEncodePskCredential() {
-        final PskCredential credential = new PskCredential("foo");
-        credential.setSecrets(List.of(new PskSecret().setKey(new byte[] { 0x00, 0x01 })));
+
+        final byte[] key = new byte[] { 0x00, 0x01 };
+
+        final PskSecret pskSecret = new PskSecret();
+        addCommonProperties(pskSecret);
+        pskSecret.setKey(key);
+
+        final PskCredential credential = new PskCredential("foo", List.of(pskSecret));
 
         final JsonObject json = JsonObject.mapFrom(credential);
         assertNotNull(json);
         assertEquals("psk", json.getString(RegistryManagementConstants.FIELD_TYPE));
         assertThat(json.getJsonArray(RegistryManagementConstants.FIELD_SECRETS)).hasSize(1);
+        final JsonObject secret = json.getJsonArray(RegistryManagementConstants.FIELD_SECRETS).getJsonObject(0);
+        assertCommonSecretProperties(secret);
+        assertThat(secret.getBinary(RegistryManagementConstants.FIELD_SECRETS_KEY)).isEqualTo(key);
+    }
 
-        final CommonCredential decodedCredential = json.mapTo(CommonCredential.class);
-        assertTrue(decodedCredential instanceof PskCredential);
+    /**
+     * Verifies that a JSON object can be decoded into a PSK credential.
+     */
+    @Test
+    public void testDecodePskCredential() {
+
+        final byte[] key = new byte[] { 0x00, 0x01 };
+        final JsonObject jsonCredential = new JsonObject()
+                .put(RegistryManagementConstants.FIELD_TYPE, RegistryManagementConstants.SECRETS_TYPE_PRESHARED_KEY)
+                .put(RegistryManagementConstants.FIELD_AUTH_ID, "foo_ID-ext.4563=F")
+                .put(RegistryManagementConstants.FIELD_ENABLED, true)
+                .put(RegistryManagementConstants.FIELD_SECRETS, new JsonArray()
+                        .add(new JsonObject()
+                                .put(RegistryManagementConstants.FIELD_ENABLED, true)
+                                .put(RegistryManagementConstants.FIELD_SECRETS_NOT_BEFORE, NOT_BEFORE_STRING)
+                                .put(RegistryManagementConstants.FIELD_SECRETS_NOT_AFTER, NOT_AFTER_STRING)
+                                .put(RegistryManagementConstants.FIELD_SECRETS_KEY, Base64.getEncoder().encodeToString(key))
+                                .put(RegistryManagementConstants.FIELD_SECRETS_COMMENT, SECRET_COMMENT)));
+
+
+        final PskCredential credential = jsonCredential.mapTo(PskCredential.class);
+
+        assertEquals("foo_ID-ext.4563=F", credential.getAuthId());
+        assertTrue(credential.isEnabled());
+        assertEquals(1, credential.getSecrets().size());
+
+        final PskSecret secret = credential.getSecrets().get(0);
+        assertCommonSecretProperties(secret);
+        assertThat(secret.getKey()).isEqualTo(key);
     }
 
     /**
@@ -112,14 +203,43 @@ public class CredentialsTest {
      */
     @Test
     public void testEncodeX509Credential() {
-        final X509CertificateCredential credential = new X509CertificateCredential("CN=foo, O=bar");
+
+        final X509CertificateSecret x509Secret = new X509CertificateSecret();
+        addCommonProperties(x509Secret);
+        final X509CertificateCredential credential = new X509CertificateCredential("CN=foo, O=bar", List.of(x509Secret));
 
         final JsonObject json = JsonObject.mapFrom(credential);
-        assertNotNull(json);
-        assertNull(json.getJsonArray(RegistryManagementConstants.FIELD_SECRETS));
-
         assertEquals("x509-cert", json.getString(RegistryManagementConstants.FIELD_TYPE));
         assertEquals("CN=foo,O=bar", json.getString(RegistryManagementConstants.FIELD_AUTH_ID));
+        final JsonObject secret = json.getJsonArray(RegistryManagementConstants.FIELD_SECRETS).getJsonObject(0);
+        assertCommonSecretProperties(secret);
+    }
+
+    /**
+     * Verifies that a JSON object can be decoded into an X.509 credential.
+     */
+    @Test
+    public void testDecodeX509Credential() {
+
+        final JsonObject jsonCredential = new JsonObject()
+                .put(RegistryManagementConstants.FIELD_TYPE, RegistryManagementConstants.SECRETS_TYPE_X509_CERT)
+                .put(RegistryManagementConstants.FIELD_AUTH_ID, "CN=Acme")
+                .put(RegistryManagementConstants.FIELD_ENABLED, true)
+                .put(RegistryManagementConstants.FIELD_SECRETS, new JsonArray()
+                        .add(new JsonObject()
+                                .put(RegistryManagementConstants.FIELD_ENABLED, true)
+                                .put(RegistryManagementConstants.FIELD_SECRETS_NOT_BEFORE, NOT_BEFORE_STRING)
+                                .put(RegistryManagementConstants.FIELD_SECRETS_NOT_AFTER, NOT_AFTER_STRING)
+                                .put(RegistryManagementConstants.FIELD_SECRETS_COMMENT, SECRET_COMMENT)));
+
+        final X509CertificateCredential credential = jsonCredential.mapTo(X509CertificateCredential.class);
+
+        assertEquals("CN=Acme", credential.getAuthId());
+        assertTrue(credential.isEnabled());
+        assertEquals(1, credential.getSecrets().size());
+
+        final X509CertificateSecret secret = credential.getSecrets().get(0);
+        assertCommonSecretProperties(secret);
     }
 
     /**
@@ -127,16 +247,46 @@ public class CredentialsTest {
      */
     @Test
     public void testEncodeGenericCredential() {
-        final GenericCredential credential = new GenericCredential("custom-type", "foo");
+
+        final GenericSecret genericSecret = new GenericSecret();
+        addCommonProperties(genericSecret);
+        final GenericCredential credential = new GenericCredential("custom-type", "foo", List.of(genericSecret));
 
         final JsonObject json = JsonObject.mapFrom(credential);
-        assertThat(json).isNotNull();
-        assertThat(json.getJsonArray(RegistryManagementConstants.FIELD_SECRETS)).isNull();
-
         assertThat(json.getString(RegistryManagementConstants.FIELD_TYPE)).isEqualTo("custom-type");
+        final JsonObject secret = json.getJsonArray(RegistryManagementConstants.FIELD_SECRETS).getJsonObject(0);
+        assertCommonSecretProperties(secret);
         final CommonCredential decodedCredential = json.mapTo(CommonCredential.class);
         assertThat(decodedCredential).isInstanceOf(GenericCredential.class);
 
+    }
+
+    /**
+     * Verifies that a JSON object can be decoded into a Generic credential.
+     */
+    @Test
+    public void testDecodeGenericCredential() {
+
+        final JsonObject jsonCredential = new JsonObject()
+                .put(RegistryManagementConstants.FIELD_TYPE, "custom-type")
+                .put(RegistryManagementConstants.FIELD_AUTH_ID, "foo_ID-ext.4563=F")
+                .put(RegistryManagementConstants.FIELD_ENABLED, true)
+                .put(RegistryManagementConstants.FIELD_SECRETS, new JsonArray()
+                        .add(new JsonObject()
+                                .put(RegistryManagementConstants.FIELD_ENABLED, true)
+                                .put(RegistryManagementConstants.FIELD_SECRETS_NOT_BEFORE, NOT_BEFORE_STRING)
+                                .put(RegistryManagementConstants.FIELD_SECRETS_NOT_AFTER, NOT_AFTER_STRING)
+                                .put(RegistryManagementConstants.FIELD_SECRETS_COMMENT, SECRET_COMMENT)));
+
+        final GenericCredential credential = jsonCredential.mapTo(GenericCredential.class);
+
+        assertThat(credential.getType()).isEqualTo("custom-type");
+        assertEquals("foo_ID-ext.4563=F", credential.getAuthId());
+        assertTrue(credential.isEnabled());
+        assertEquals(1, credential.getSecrets().size());
+
+        final GenericSecret secret = credential.getSecrets().get(0);
+        assertCommonSecretProperties(secret);
     }
 
     /**
@@ -155,14 +305,14 @@ public class CredentialsTest {
     protected void testEncodeMany(final Function<List<CommonCredential>, Object> provider) {
         final List<CommonCredential> credentials = new ArrayList<>();
 
-        final PskCredential credential = new PskCredential("device");
         final PskSecret secret = new PskSecret();
         secret.setKey("foo".getBytes(StandardCharsets.UTF_8));
-        credential.setSecrets(Collections.singletonList(secret));
+        final PskCredential credential = new PskCredential("device", List.of(secret));
         credentials.add(credential);
+        final GenericCredential genCred = new GenericCredential("custom", "device", List.of(new GenericSecret()));
+        credentials.add(genCred);
 
         final String json = Json.encode(provider.apply(credentials));
-
         final JsonArray array = new JsonArray(json);
         for (final Object o : array) {
             assertTrue(o instanceof JsonObject);
@@ -192,41 +342,64 @@ public class CredentialsTest {
     }
 
     /**
-     * Test the decoding of a Json Object to a simple password credential.
+     * Verifies that the decoding of a JSON object representing credentials fails
+     * if it does not contain a secrets property or if the property contains an empty array.
      */
     @Test
-    public void testDecodePasswordCredential() {
+    public void testDecodeCredentialsFailsForMissingSecrets() {
 
-        final JsonObject jsonCredential = new JsonObject()
+        final JsonObject pwdCreds = new JsonObject()
                 .put(RegistryManagementConstants.FIELD_TYPE, RegistryManagementConstants.SECRETS_TYPE_HASHED_PASSWORD)
                 .put(RegistryManagementConstants.FIELD_AUTH_ID, "foo_ID-ext.4563=F")
-                .put(RegistryManagementConstants.FIELD_ENABLED, true)
-                .put(RegistryManagementConstants.FIELD_SECRETS, new JsonArray()
-                        .add(new JsonObject()
-                                .put(RegistryManagementConstants.FIELD_ENABLED, true)
-                                .put(RegistryManagementConstants.FIELD_SECRETS_NOT_BEFORE,
-                                        Instant.EPOCH.truncatedTo(ChronoUnit.SECONDS))
-                                .put(RegistryManagementConstants.FIELD_SECRETS_NOT_AFTER,
-                                        Instant.EPOCH.plusSeconds(1).truncatedTo(ChronoUnit.SECONDS))
-                                .put(RegistryManagementConstants.FIELD_SECRETS_HASH_FUNCTION, RegistryManagementConstants.HASH_FUNCTION_SHA256)
-                                .put(RegistryManagementConstants.FIELD_SECRETS_PWD_HASH,
-                                        "2a5d81942494986ce6e23aadfa18cd426a1d7ab90629a0814d244c4cd82cc81f")
-                                .put(RegistryManagementConstants.FIELD_SECRETS_SALT, "abc")
-                                .put(RegistryManagementConstants.FIELD_SECRETS_COMMENT, "setec astronomy")));
+                .put(RegistryManagementConstants.FIELD_ENABLED, true);
 
-        final PasswordCredential credential = jsonCredential.mapTo(PasswordCredential.class);
+        assertThatThrownBy(() -> pwdCreds.mapTo(PasswordCredential.class))
+            .isInstanceOf(IllegalArgumentException.class);
 
-        assertNotNull(credential);
-        assertEquals("foo_ID-ext.4563=F", credential.getAuthId());
-        assertTrue(credential.isEnabled());
-        assertEquals(1, credential.getSecrets().size());
+        pwdCreds.put(RegistryManagementConstants.FIELD_SECRETS, new JsonArray());
 
-        final PasswordSecret secret = credential.getSecrets().get(0);
+        assertThatThrownBy(() -> pwdCreds.mapTo(PasswordCredential.class))
+            .isInstanceOf(IllegalArgumentException.class);
 
-        assertEquals("setec astronomy", secret.getComment());
-        assertEquals("abc", secret.getSalt());
-        assertEquals(RegistryManagementConstants.HASH_FUNCTION_SHA256, secret.getHashFunction());
-        assertEquals("2a5d81942494986ce6e23aadfa18cd426a1d7ab90629a0814d244c4cd82cc81f", secret.getPasswordHash());
+        final JsonObject pskCreds = new JsonObject()
+                .put(RegistryManagementConstants.FIELD_TYPE, RegistryManagementConstants.SECRETS_TYPE_PRESHARED_KEY)
+                .put(RegistryManagementConstants.FIELD_AUTH_ID, "foo_ID-ext.4563=F")
+                .put(RegistryManagementConstants.FIELD_ENABLED, true);
+
+        assertThatThrownBy(() -> pskCreds.mapTo(PasswordCredential.class))
+            .isInstanceOf(IllegalArgumentException.class);
+
+        pskCreds.put(RegistryManagementConstants.FIELD_SECRETS, new JsonArray());
+
+        assertThatThrownBy(() -> pskCreds.mapTo(PasswordCredential.class))
+            .isInstanceOf(IllegalArgumentException.class);
+
+        final JsonObject x509Creds = new JsonObject()
+                .put(RegistryManagementConstants.FIELD_TYPE, RegistryManagementConstants.SECRETS_TYPE_X509_CERT)
+                .put(RegistryManagementConstants.FIELD_AUTH_ID, "CN=Acme")
+                .put(RegistryManagementConstants.FIELD_ENABLED, true);
+
+        assertThatThrownBy(() -> x509Creds.mapTo(PasswordCredential.class))
+            .isInstanceOf(IllegalArgumentException.class);
+
+        x509Creds.put(RegistryManagementConstants.FIELD_SECRETS, new JsonArray());
+
+        assertThatThrownBy(() -> x509Creds.mapTo(PasswordCredential.class))
+            .isInstanceOf(IllegalArgumentException.class);
+
+        final JsonObject genericCreds = new JsonObject()
+                .put(RegistryManagementConstants.FIELD_TYPE, "custom")
+                .put(RegistryManagementConstants.FIELD_AUTH_ID, "foo_ID-ext.4563=F")
+                .put(RegistryManagementConstants.FIELD_ENABLED, true);
+
+        assertThatThrownBy(() -> genericCreds.mapTo(GenericCredential.class))
+            .isInstanceOf(IllegalArgumentException.class);
+
+        genericCreds.put(RegistryManagementConstants.FIELD_SECRETS, new JsonArray());
+
+        assertThatThrownBy(() -> genericCreds.mapTo(GenericCredential.class))
+            .isInstanceOf(IllegalArgumentException.class);
+
     }
 
     /**
@@ -236,17 +409,15 @@ public class CredentialsTest {
     public void testEncodeDecode1() {
 
         final String authId = "abcd-=.";
-        final Instant notAfter = Instant.parse("1992-09-11T11:38:00.123456Z");
 
         // create credentials to encode
 
         final PasswordSecret secret = new PasswordSecret();
         secret.setPasswordHash("setec astronomy");
         secret.setSalt("abc");
-        secret.setNotAfter(notAfter);
+        secret.setNotAfter(NOT_AFTER);
 
-        final PasswordCredential cred = new PasswordCredential(authId);
-        cred.setSecrets(Arrays.asList(secret));
+        final PasswordCredential cred = new PasswordCredential(authId, List.of(secret));
 
         // encode
 
@@ -264,7 +435,7 @@ public class CredentialsTest {
         assertThat(decodeCredential.getAuthId()).isEqualTo(authId);
         assertThat(decodeCredential.getSecrets()).hasSize(1);
         final PasswordSecret decodeSecret = decodeCredential.getSecrets().get(0);
-        assertThat(decodeSecret.getNotAfter()).isEqualTo(Instant.parse("1992-09-11T11:38:00Z"));
+        assertThat(decodeSecret.getNotAfter()).isEqualTo(NOT_AFTER);
     }
 
     /**
@@ -274,8 +445,8 @@ public class CredentialsTest {
     @Test
     public void testMergeFailsForDifferentType() {
 
-        final PasswordCredential pwdCredentials = new PasswordCredential("foo");
-        assertThatThrownBy(() -> pwdCredentials.merge(new PskCredential("bar")))
+        final PasswordCredential pwdCredentials = Credentials.createPasswordCredential("foo", "bar");
+        assertThatThrownBy(() -> pwdCredentials.merge(Credentials.createPSKCredential("acme", "key")))
             .isInstanceOf(IllegalArgumentException.class);
     }
 
@@ -288,13 +459,11 @@ public class CredentialsTest {
 
         final PasswordSecret existingSecret = spy(PasswordSecret.class);
         existingSecret.setId("two");
-        final PasswordCredential existingCredentials = new PasswordCredential("foo");
-        existingCredentials.setSecrets(List.of(existingSecret));
+        final PasswordCredential existingCredentials = new PasswordCredential("foo", List.of(existingSecret));
 
         final PasswordSecret newSecret = spy(PasswordSecret.class);
         newSecret.setId("one");
-        final PasswordCredential newCredentials = new PasswordCredential("foo");
-        newCredentials.setSecrets(List.of(newSecret));
+        final PasswordCredential newCredentials = new PasswordCredential("foo", List.of(newSecret));
 
         assertThatThrownBy(() -> newCredentials.merge(existingCredentials))
             .isInstanceOf(IllegalArgumentException.class);
@@ -311,14 +480,12 @@ public class CredentialsTest {
 
         final PskSecret existingSecret = spy(PskSecret.class);
         existingSecret.setId("one");
-        final PskCredential existingCredentials = new PskCredential("foo");
-        existingCredentials.setSecrets(List.of(existingSecret));
+        final PskCredential existingCredentials = new PskCredential("foo", List.of(existingSecret));
 
         final PskSecret updatedSecret = spy(PskSecret.class);
         updatedSecret.setId("one");
         final PskSecret newSecret = spy(PskSecret.class);
-        final PskCredential updatedCredentials = new PskCredential("foo");
-        updatedCredentials.setSecrets(List.of(updatedSecret, newSecret));
+        final PskCredential updatedCredentials = new PskCredential("foo", List.of(updatedSecret, newSecret));
 
         updatedCredentials.merge(existingCredentials);
         verify(updatedSecret).merge(existingSecret);
@@ -336,13 +503,13 @@ public class CredentialsTest {
     @MethodSource("illegalAuthIds")
     @ParameterizedTest
     public void testInstantiationFailsForIllegalAuthId(final String illegalAuthId) {
-        assertThatThrownBy(() -> new GenericCredential("custom", illegalAuthId))
+        assertThatThrownBy(() -> new GenericCredential("custom", illegalAuthId, List.of(new GenericSecret())))
             .isInstanceOf(IllegalArgumentException.class);
-        assertThatThrownBy(() -> new PasswordCredential(illegalAuthId))
+        assertThatThrownBy(() -> new PasswordCredential(illegalAuthId, List.of(new PasswordSecret())))
             .isInstanceOf(IllegalArgumentException.class);
-        assertThatThrownBy(() -> new PskCredential(illegalAuthId))
+        assertThatThrownBy(() -> new PskCredential(illegalAuthId, List.of(new PskSecret())))
             .isInstanceOf(IllegalArgumentException.class);
-        assertThatThrownBy(() -> new X509CertificateCredential(illegalAuthId))
+        assertThatThrownBy(() -> new X509CertificateCredential(illegalAuthId, List.of(new X509CertificateSecret())))
             .isInstanceOf(IllegalArgumentException.class);
     }
 
